fix artist information problems causing firestore issues and not allowing to upload projects. change colour of default album. move play button and shuffle to right on mobile. remove palette feature from mobile

--- a/app/src/css/ContentManagement.css
+++ b/app/src/css/ContentManagement.css
@@ -121,7 +121,7 @@
 }
 
 .album-manager-image-wrapper {
-    background-color: #1ed76b;
+    background-color: #007a33;
     width: 180px;
     height: 180px;
     border-radius: 6px;
